syntax = "proto3";

service Entry {
    rpc CreateApp (EntryRequest) returns (EntryResponse) {}
    rpc ListApps (EntryRequest) returns (EntryResponse) {}
    rpc GetApp (EntryRequest) returns (EntryResponse) {}
    rpc CreateCluster (EntryRequest) returns (EntryResponse) {}
    rpc GetCluster (EntryRequest) returns (EntryResponse) {}
    rpc ListClusters (EntryRequest) returns (EntryResponse) {}
    rpc CreateEnv (EntryRequest) returns (EntryResponse) {}
    rpc GetEnv (EntryRequest) returns (EntryResponse) {}
    rpc ListEnvs (EntryRequest) returns (EntryResponse) {}
    rpc PullInstances (EntryRequest) returns (EntryResponse) {}
    rpc CreateNamespace (EntryRequest) returns (EntryResponse) {}
    rpc CreateItem (EntryRequest) returns (EntryResponse) {}
    rpc UpdateItem (EntryRequest) returns (EntryResponse) {}
    rpc DeleteItems (EntryRequest) returns (EntryResponse) {}
}

message App {
    int64 id = 1;
    string name = 2;
    int64 createdTime = 3;
    int64 updatedTime = 4;
}

message Cluster {
    int64 id = 1;
    string name = 2;
    string appName = 3;
    int64 createdTime = 4;
    int64 updatedTime = 5;
}

message Instance {
    int64 id = 1;
    string appName = 2;
    string clusterName = 3;
    string ip = 4;
    int64 createdTime = 5;
    int64 updatedTime = 6;
}

message Item {
    int64 id = 1;
    int64 namespaceId = 2;
    string key = 3;
    string value = 4;
    string comment = 5;
    int32 lineNo = 6;
    int32 updateType = 7;
    int64 createdTime = 8;
    int64 updatedTime = 9;
}

message Namespace {
    int64 id = 1;
    string appName = 2;
    string name = 3;
    string clusterName = 4;
    int64 createdTime = 5;
    int64 updatedTime = 6;
}

message EntryRequest {
    App app = 1;
}

message Error {
    int32 code = 1;
    string msg = 2;
}

message EntryResponse {
    Error error = 2;
    App app = 3;
    repeated App appList = 4;
    Cluster cluster = 5;
    repeated Cluster clusterList = 6;
}
